# storage/api-docs/api-docs.json
@@ -618,6 +618,25 @@
                 ],
                 "summary": "Обновление токена",
                 "operationId": "30c20c52f5f72828d8c531fd7c9ea3e7",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "refresh_token"
+                                ],
+                                "properties": {
+                                    "refresh_token": {
+                                        "type": "string",
+                                        "example": "abc1234hfhfgsjhehjdhu"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "200": {
                         "description": "OK"
